syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.persistencetier.protobuf";


package seller;

message EmptySeller{

}

message SellerRequest {
  int32 cvr = 1;
}

message SellerRequestEmail {
  string email = 1;
}

message ImageModelRequestSeller{
  string imageUrl = 1;
}

message UserModelResponseSeller{
  string firstName = 1;
  string lastName = 2;
  AddressModelSeller address = 3;
  int32 phoneNumber = 4;
  string email = 5;
}

message AddressModelSeller{
  string city = 1;
  string streetName = 2;
  int32 postCode = 3;
}

message CreateUserModelRequestSeller{
  string firstName = 1;
  string lastName = 2;
  AddressModelSeller address = 3;
  int32 phoneNumber = 4;
  string email = 5;
  string password = 6;
  string role = 7;
}

message CreateSellerRequest {
  CreateUserModelRequestSeller user = 1;
  int32 cvr = 2;
  string companyName = 3;
  string description = 4;
  string type = 5;
  string website = 6;
  float rating = 7;
  ImageModelRequestSeller image = 8;
}

message SellerResponse {
  UserModelResponseSeller user = 1;
  int32 cvr = 2;
  string companyName = 3;
  string description = 4;
  string type = 5;
  string website = 6;
  float rating = 7;
  ImageModelRequestSeller image = 8;
}

service SellerService {
  rpc createSeller(CreateSellerRequest) returns (SellerResponse);
  rpc getSellerByCvr(SellerRequest) returns (SellerResponse);
  rpc getAllSellers(EmptySeller) returns (stream SellerResponse);
  rpc deleteSellerByCvr(SellerRequest) returns (SellerResponse);
  rpc getSellerByEmail(SellerRequestEmail) returns (SellerResponse);
}